--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "scss": "^0.2.4"
+    "react-icons": "^5.3.0",
+    "scss": "^0.2.4",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
