--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "grunt-sass": "^3.1.0",
+    "gulp-sass": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "sass": "^1.80.2",
+    "sass-loader": "^10.0.0",
     "scss": "^0.2.4",
     "typed.js": "^2.1.0"
   },
