--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "framer-motion": "^11.11.9",
     "grunt-sass": "^3.1.0",
     "gulp-sass": "^5.1.0",
     "react": "^18.3.1",
